fix: some things doesn't fit on smaller devices SE

--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -141,13 +141,13 @@ GridLayout.details Label {
 
 .tile-header-dark {
     color: #ffffff;
-    font-size: 16;
+    font-size: 14;
     text-align: center;
 }
 
 .tile-header-white {
     color: #000000;
-    font-size: 16;
+    font-size: 14;
     text-align: center;
     padding: 5 5 5 5;
 }
@@ -241,7 +241,7 @@ GridLayout.details Label {
 }
 
 .red-number {
-    font-size: 22;
+    font-size: 18;
     color: #fb5a2e;
     font-weight: bold;
     margin-right: 10;
